<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ImageView
        android:contentDescription="@string/hello_world"
        android:id="@+id/app_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/app_icon"
        android:layout_below="@+id/app_icon"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/app_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copy_right"
        android:textColor="#999999"
        android:textSize="12sp" />

    <Button
        android:id="@+id/about_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/app_copyright"
        android:layout_alignRight="@+id/app_copyright"
        android:layout_centerVertical="true"
        android:text="@string/about_booch"
        android:background="#18a8dd" />

    <Button
        android:id="@+id/declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_team"
        android:layout_alignRight="@+id/about_team"
        android:layout_below="@+id/about_team"
        android:text="@string/declare"
        android:background="#ff5500" />

</RelativeLayout>
