<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4ecef"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <TextView
        android:id="@+id/txt_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/changePassword"
        android:textSize="30sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cha_op" />

            <EditText
                android:id="@+id/old_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/cha_op"
                 />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cha_np" />

            <EditText
                android:id="@+id/new_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/cha_np"
                 />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cha_renp" />

            <EditText
                android:id="@+id/renew_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/cha_renp"
                 />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_conchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/cha_confirm" />

</LinearLayout>