<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:tools="http://schemas.android.com/tools" 
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dtl_bottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/dtl_book_cover"
                android:layout_width="55dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/bookcover"
                android:src="@drawable/cover_default_s" />

            <TextView
                android:id="@+id/dtl_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_search_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_ibsn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_classify_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_page_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:id="@+id/dtl_brif_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TableLayout
                android:id="@+id/dtl_info_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/dtl_hold_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hold" />
                </TableRow>
				
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/dtl_bar_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/ibsn" />

                    <TextView
                        android:id="@+id/dtl_locate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/dtl_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/state" />

                    <TextView
                        android:id="@+id/dtl_date_out"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/date_out" />

                    <TextView
                        android:id="@+id/dtl_date_return"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/date_back" />
                </TableRow>
                <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/dtl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btn_dtl_buy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/buy" />

        <Button
            android:id="@+id/btn_dtl_put_to_shef"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/put" />
        
        <Button
            android:id="@+id/btn_dtl_put_to_remind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:text="@string/remind" />

    </TableRow>

</RelativeLayout>