<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4ecef"
    
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changeInfo"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" 
            android:background="#ffffff"
            android:paddingBottom="@dimen/activity_vertical_margin"
    		android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_id"
                     />

                <TextView
                    android:id="@+id/log_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    
                     />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_num"
                     />

                <TextView
                    android:id="@+id/log_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    
                     />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_name"
                     />

                <TextView
                    android:id="@+id/log_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    
                     />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_ID"
                     />

                <TextView
                    android:id="@+id/log_identify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    
                     />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_state" />

                <TextView
                    android:id="@+id/log_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_date" />

                <TextView
                    android:id="@+id/log_date_effect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" 
            android:text="修改信息"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" 
            android:background="#ffffff"
            android:paddingBottom="@dimen/activity_vertical_margin"
    		android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_com" />

                <EditText
                    android:id="@+id/log_company"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/log_com"
                    
                     />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_home" />

                <EditText
                    android:id="@+id/log_address"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/log_home"
                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_em" />

                <EditText
                    android:id="@+id/log_email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_phone" />

                <EditText
                    android:id="@+id/log_phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    
                    android:inputType="phone"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_pwd" />

                <EditText
                    android:id="@+id/log_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                   	
                    android:inputType="textPassword"/>

            </TableRow>
        </TableLayout>
        <Button 
            android:id="@+id/btn_info_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认修改"
            android:layout_gravity="center"/>
    </LinearLayout>

</ScrollView>